# linvstmanager

./: .gitignore  CMakeLists.txt  COPYING  README.md  config.h.in  confighandler.cpp  confighandler.h  dialogpreferences.cpp  dialogpreferences.h  dialogscan.cpp  dialogscan.h  enums.h  horizontalline.cpp  lineeditbridge.cpp  linkhandler.cpp  linkhandler.h  linvstmanager.desktop.in  logoutput.cpp  main.cpp  mainwindow.cpp  mainwindow.h  modelscan.cpp  modelscan.h  modelvstbuckets.cpp  modelvstbuckets.h  preferences.cpp  preferences.h  scanhandler.cpp  scanhandler.h  scanresult.cpp  scanresult.h  verticalline.cpp  vstbucket.cpp  vstbucket.h
src/: LinVstManager.pro  colors.h  config.h  confighandler.cpp  confighandler.h  customprogressdialog.cpp  customprogressdialog.h  customsortfilterproxymodel.cpp  customsortfilterproxymodel.h  datahasher.cpp  datahasher.h  datastore.h  defines.h  dialogpreferences.cpp  dialogpreferences.h  dialogrename.cpp  dialogrename.h  dialogrenamebatch.cpp  dialogrenamebatch.h  dialogscan.cpp  dialogscan.h  enums.h  horizontalline.cpp  horizontalline.h  legacyconfigparser.cpp  legacyconfigparser.h  lineeditbridge.cpp  lineeditbridge.h  linkhandler.cpp  linkhandler.h  logoutput.cpp  logoutput.h  main.cpp  mainwindow.cpp  mainwindow.h  modelscan.cpp  modelscan.h  modelvstbuckets.cpp  modelvstbuckets.h  pathhasher.cpp  (+18 more)
src/VstDllCheck/: Makefile  Makefile32  Makefile64  README.md  test.sh  vstdllcheck.cpp  vstdllcheck.h
src/resources/: export_resolutions.py  resources.qrc
test_deploy/: README_deploy.md  build_inside_docker.sh  deploy.sh
test_deploy/debian_buster/: Dockerfile  docker-compose.yml  docker-compose__build_app.yml
test_deploy/fedora_31/: Dockerfile  docker-compose.yml  docker-compose__build_app.yml
test_deploy/fedora_34/: Dockerfile  docker-compose.yml  docker-compose__build_app.yml
test_deploy/opensuse_tumbleweed/: Dockerfile  docker-compose.yml  docker-compose__build_app.yml
test_deploy/ubuntu_1804/: Dockerfile  Dockerfile_old  docker-compose.yml  docker-compose__build_app.yml
test_deploy/ubuntu_2004/: Dockerfile  docker-compose.yml  docker-compose__build_app.yml
